# connect-cli

./: .gitignore  .gitmodules  .travis.yml  README.md  outdated.txt  package.sh  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: build.yml  bump.yml  publish.yml  sonarcloud.yml
cnctcli/: __init__.py  ccli.py  config.py  constants.py
cnctcli/actions/: accounts.py  customers.py  customers_syncronizer.py  products.py  reports.py  reports_params.py  utils.py
cnctcli/actions/products/: __init__.py  actions_sync.py  capabilities_sync.py  clone_product.py  configuration_values_sync.py  constants.py  export.py  general_sync.py  items_sync.py  media_sync.py  params_sync.py  static_resources_sync.py  sync.py  templates_sync.py  utils.py
cnctcli/api/: products.py  utils.py
cnctcli/commands/: account.py  api.py  customer.py  product.py  report.py  utils.py
cnctcli/plugins/: products.py
connect/.config/report-boilerplate/: cookiecutter.json
connect/.config/report-boilerplate/hooks/: post_gen_project.py
connect/.config/report-boilerplate/{{cookiecutter.report_slug}}/: Readme.md  entry_function_v1.py  entry_function_v2.py
connect/cli/: __init__.py  ccli.py
connect/cli/core/: __init__.py  base.py  config.py  constants.py  http.py  plugins.py  terminal.py  utils.py
connect/cli/core/account/: commands.py  constants.py  helpers.py
connect/cli/plugins/commerce/: commands.py  utils.py
connect/cli/plugins/customer/: commands.py  constants.py  export.py  sync.py  utils.py
connect/cli/plugins/extension/: commands.py  helpers.py  utils.py
connect/cli/plugins/locale/: commands.py  constants.py  utils.py
connect/cli/plugins/play/: __init__.py  commands.py  context.py  save.py  script.py
connect/cli/plugins/product/: api.py  clone.py  commands.py  constants.py  export.py  utils.py
connect/cli/plugins/project/: commands.py  constants.py  cookiehelpers.py  extension_helpers.py  git.py  helpers.py  renderer.py  report_helpers.py  utils.py  validators.py
connect/cli/plugins/report/: commands.py  constants.py  helpers.py  utils.py  wizard.py
connect/cli/plugins/shared/: base.py  constants.py  exceptions.py  export.py  sync_stats.py  translation_attr_sync.py  translation_sync.py  translations_synchronizers.py  utils.py
connect/cli/plugins/translation/: activate.py  commands.py  constants.py  export.py  export_attributes.py  primarize.py  sync.py  (+2 more)
docs/: core_usage.md  customers_usage.md  linux_deps_install.md  locales_usage.md  osx_deps_install.md  products_usage.md  project_usage.md  reports_usage.md  stream_usage.md  translations_usage.md  win_deps_install.md
requirements/: dev.txt  test.txt
resources/: Dockerfile  README.md  ccli.spec  ccli_shell.ps1  generate_pynsist_config.py  get_latest_reports.py
resources/theme_files/: default.json  purple.json
tests/: conftest.py  data.py  test_ccli.py  test_config.py
tests/actions/: test_accounts.py  test_customers.py  test_customers_synchronizer.py
tests/actions/products/: test_actions_sync.py  test_capabilities_sync.py  test_clone.py  test_conf_values_sync.py  test_general_sync.py  test_items_sync.py  test_media_sync.py  test_params_sync.py  test_sync.py  test_template_sync.py  test_util.py
tests/actions/reports/: test_report_params.py  test_reports.py
tests/api/: helpers.py  test_products.py  test_utils.py
tests/commands/: test_account.py  test_product.py  test_reports.py  test_utils.py
tests/core/: test_base.py  test_config.py  test_http.py  test_plugins.py  test_sync_stats.py  test_terminal.py  test_utils.py
tests/core/account/: test_commands.py  test_helpers.py
tests/fixtures/: actions_response.json  actions_sync.xlsx  capabilities_sync.xlsx  categories_response.json  comparation_product.xlsx  configuration_parameters_response.json  configuration_sync.xlsx  configurations_response.json  fulfillment_parameters_response.json  items_response.json  items_sync.xlsx  locales_response.json  media_response.json  media_sync.xlsx  messages_sync.xlsx  new_translation_response.json  ordering_parameters_response.json  params_sync.xlsx  primary_translation_response.json  product_messages_response.json  product_response.json  product_translations_response.json  report.json.j2  reports.json  templates_response.json  templates_sync.xlsx  translation.xlsx  translation_attributes_response.json  translation_attributes_response.xlsx  translation_response.json  translations_sync.xlsx  units_response.json
tests/fixtures/commerce/: attachments_response.json  billing_streams_response.json  columns_response.json  pricing_streams_response.json  stream_retrieve_response.json  stream_sync.xlsx  transformations_response.json
tests/fixtures/customer/: customer.json  customers.xlsx  reseller.json
tests/fixtures/extensions/basic_ext/: docker-compose.yml  pyproject.toml
tests/fixtures/extensions/basic_ext/connect_ext/: extension.json  extension.py
tests/plugins/commerce/: test_commands.py  test_utils.py
tests/plugins/customer/: test_commands.py  test_export.py  test_sync.py
tests/plugins/locale/: test_commands.py  test_utils.py
tests/plugins/play/: context.json  test_context.py  test_play_commands.py  test_script.py  updated.json
tests/plugins/product/: test_api.py  test_clone.py  test_commands.py  test_export.py  test_utils.py
tests/plugins/project/: test_commands.py  test_extension_helpers.py  test_extension_renderer.py  test_extension_utils.py  test_extension_validations.py  test_extension_validators.py  test_git.py  test_helpers.py  test_renderer.py  test_report_helpers.py  test_report_validations.py  test_utils.py  test_validators.py
tests/plugins/report/: test_commands.py  test_helpers.py  test_utils.py  test_wizard.py
tests/plugins/shared/: test_base.py  test_sync_stats.py  test_translation_attr_sync.py  test_translation_sync.py  test_translations_synchronizers.py  test_utils.py
tests/plugins/translation/: test_activate.py  test_commands.py  test_export.py  test_export_attributes.py  test_primarize.py  test_sync.py  test_translation_sync.py  test_utils.py
(+131 files in other folders)
