[tool.poetry]
name = "connect-cli"
version = "26.0"
description = "CloudBlue Connect Command Line Interface"
authors = ["CloudBlue LLC"]
license = "Apache-2.0"

packages = [
    { include = "connect" },
]
exclude = [
    "connect/.data/connect_reports/tests",
    "connect/.data/connect_reports/.git",
    "tests",
]

readme = "./README.md"
documentation = "https://connect.cloudblue.com/community/sdk/cli/"
homepage = "https://connect.cloudblue.com"
repository = "https://github.com/cloudblue/connect-cli"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]
keywords = [
    "fulfillment",
    "command",
    "line",
    "interface",
    "utility",
    "cli",
    "vendor",
    "connect",
    "cloudblue"
]

[tool.poetry.scripts]
ccli = 'connect.cli.ccli:main'

[tool.poetry.plugins."connect.cli.plugins"]
"customer" = "connect.cli.plugins.customer.commands:get_group"
"locales" = "connect.cli.plugins.locale.commands:get_group"
"product" = "connect.cli.plugins.product.commands:get_group"
"project" = "connect.cli.plugins.project.commands:get_group"
"report" = "connect.cli.plugins.report.commands:get_group"
"play" = "connect.cli.plugins.play.commands:get_group"
"translation" = "connect.cli.plugins.translation.commands:get_group"


[tool.poetry.dependencies]
python = ">=3.8,<4"
click = "^8.1.3"
openpyxl = "^3.0.7"
connect-openapi-client = ">=25.15"
interrogatio = "^2.2.2"
connect-markdown-renderer = ">=2.0.1,<3"
iso3166 = "^1.0.1"
phonenumbers = "^8.12.19"
connect-reports-core = "26.*"
requests = "^2.25.1"
toml = "^0.10.2"
Jinja2 = "^3.1.2"
jinja2-time = "^0.2.0"
connect-eaas-core = ">=26.12,<27"
rich = "^12.4.1"
poetry-core = "^1.3.0"  
uvloop = { version = "^0.16.0", markers = "sys_platform == \"linux\" or sys_platform == \"darwin\"" }
fs = "^2.4.12"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
freezegun = "^1.2.1"
coverage = {extras = ["toml"], version = "^5.3"}
responses = "^0.20.0"
flake8 = "^5.0"
flake8-bugbear = "^22"
flake8-cognitive-complexity = "^0.1"
flake8-commas = "^2.1"
flake8-future-import = "~0.4"
flake8-import-order = "~0.18"
flake8-broken-line = "~0.5"
flake8-comprehensions = "^3.10"
flake8-debugger = "^4.0.0"
flake8-eradicate = "^1.3.0"
flake8-string-format = "^0.3.0"
ipython = "^7.21.0"
wheel = "^0.37.0"
Faker = "^13.11.0"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>42"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:cacheprovider --cov=connect.cli --cov-report=html --cov-report xml --cov-report term"
filterwarnings = [
    #flake8 get_style_guide deprecated API
    "ignore:visit_Str is deprecated",
    #openpyxl Data Validation extension is not supported and will be removed
    "ignore::UserWarning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = [
    "*/migrations/*",
    "*/config/*",
    "*/settings/*",
    "*/manage.py",
    "*/wsgi.py",
    "*/urls.py"
]

exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
